# cleenosx

./: .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
crates/cleanerx-cli/: Cargo.toml
crates/cleanerx-cli/src/: main.rs
crates/cleanerx-core/: Cargo.toml
crates/cleanerx-core/src/: admin.rs  classify.rs  cleanup.rs  command.rs  lib.rs  models.rs  recovery.rs  scanners.rs
docs/: APP_STORE.md  ARCHITECTURE.md  CONTEXT.md
docs/superpowers/specs/: 2026-06-19-macos-storage-mvp-design.md
scripts/: minicleaner.sh
src/: App.tsx  format.ts  i18n.tsx  index.css  main.tsx  scanWarnings.ts  tauri.ts  types.ts
src-tauri/: Cargo.toml  Entitlements.appstore.plist  build.rs  tauri.appstore.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ActionScoreSummary.tsx  FindingsList.tsx  LanguageSelector.tsx  LoadingButton.tsx  LogsPanel.tsx  PathText.tsx  ProgressBar.tsx  RecoveryPanel.tsx  ReviewPanel.tsx  RiskChip.tsx  SettingsPanel.tsx  StatPanel.tsx  UsageTree.tsx  VolumeTable.tsx
