[package]
name = "cleanerx"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "cleanerx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cleanerx-core = { path = "../crates/cleanerx-core" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }

